# timemory

./: .LICENSE  .appveyor.yml  .clang-format  .clang-tidy  .cmake-format.yaml  .codecov.yml  .gitignore  .gitmodules  .license.c  .license.py  .readthedocs.yml  .travis.yml  .version.txt  CHANGELOG.md  CHANGES.md  CHANGES.rst  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  LICENSE.txt  MANIFEST.in  README.md  README.rst  VERSION  bld.bat  build.sh  conda.yaml  conda_build_config.yaml  meta.yaml  mkdocs.yml  pyctest-runner.py  pyproject.toml  pytest.ini  requirements.txt  sample.py  setup.cfg  setup.py  update-conda-yaml.py
examples/: CMakeLists.txt  README.md  nested.py  simple.py  test.py  timemory_plot.py  timing_plot.py
examples/ex-array-of-bundles/: CMakeLists.txt  ex_array_of_bundles.cpp
examples/ex-assemble/: CMakeLists.txt  ex_assemble.cpp
examples/ex-c/: CMakeLists.txt  README.md  ex_c.c  ex_c_timing.c  test_c_timing.c
examples/ex-caliper/: CMakeLists.txt  README.md  ex_caliper.cpp  ex_caliper.py  test_caliper.cpp  test_caliper.py
examples/ex-compiler-instrument/: CMakeLists.txt  README.md  ex_compiler_instrument.cpp
examples/ex-cpu-roofline/: CMakeLists.txt  README.md  ex_cpu_roofline.cpp  kernel.cpp  kernel.hpp  rep.h  test_cpu_roofline.cpp  test_cpu_roofline_ert.cpp
examples/ex-cuda/: CMakeLists.txt  ex_cuda_event.cu  ex_kernel_instrument.cu  ex_kernel_instrument_v2.cu
examples/ex-cuda-event/: CMakeLists.txt  README.md  cupti_profiler.h  demo.cu  ex_cuda_event.cu  test_cuda_event.cu
examples/ex-custom-dynamic-instr/: CMakeLists.txt  README.md  ex_custom_dynamic_instr.cpp
examples/ex-cxx/: CMakeLists.txt  test_cxx_timing.cpp
examples/ex-cxx-basic/: CMakeLists.txt  README.md  ex_cxx_basic.cpp  test_cxx_basic.cpp
examples/ex-cxx-graph/: test_graph.cpp
examples/ex-cxx-header-only/: CMakeLists.txt  ex_component.hpp.in  ex_component_impl.cpp.in  ex_component_main.cpp.in
examples/ex-cxx-mpi/: CMakeLists.txt  test_cxx_mpi_timing.cpp
examples/ex-cxx-overhead/: CMakeLists.txt  README.md  ex_cxx_overhead.cpp  test_cxx_overhead.cpp
examples/ex-cxx-total/: CMakeLists.txt  test_cxx_total.cpp
examples/ex-cxx-tuple/: CMakeLists.txt  README.md  ex_cxx_tuple.cpp  test_cxx_tuple.cpp
examples/ex-derived/: CMakeLists.txt  README.md  ex_derived.cpp
examples/ex-ert/: .clang-format  CMakeLists.txt  README.md  ex_ert.cpp  ex_ert_kokkos.cpp  test_ert.cpp
examples/ex-fortran/: CMakeLists.txt  README.md  ex_fortran_timing.f90
examples/ex-gotcha/: .clang-format  CMakeLists.txt  README.md  ex_gotcha.cpp  ex_gotcha_lib.cpp  ex_gotcha_lib.hpp  ex_gotcha_replacement.cpp  test_gotcha.cpp  test_gotcha_lib.cpp  test_gotcha_lib.hpp  test_gotcha_native.cpp  test_gotcha_timemory.cpp
examples/ex-gpu/: CMakeLists.txt  README.md  ex_gpu_event.cu  ex_kernel_instrument.cu  ex_kernel_instrument_v2.cu  ex_kernel_instrument_v3.cu
examples/ex-gpu-roofline/: CMakeLists.txt  README.md  ex_gpu_roofline.cpp  ex_gpu_roofline_bare.cpp  test_gpu_roofline.cpp
examples/ex-likwid/: CMakeLists.txt  README.md  ex_likwid.cpp  ex_likwid.py
examples/ex-minimal/: .clang-format  CMakeLists.txt  README.md  ex_minimal.c  ex_minimal.cpp  ex_minimal_library.c  ex_minimal_library.cpp  ex_minimal_library_overload.c  ex_minimal_library_overload.cpp  ex_python_minimal.py  test-cxx-minimal  test-cxx-minimal-library  test_minimal.c  test_minimal.cpp  test_minimal_library.c  test_minimal_library.cpp  test_minimal_library_overload.c  test_minimal_library_overload.cpp  test_python_minimal.py
examples/ex-optional/: .clang-format  CMakeLists.txt  README.md  ex_optional.cpp  ex_optional.hpp  test_optional.cpp  test_optional.hpp
examples/ex-pmpi/: CMakeLists.txt  timemory_pmpi.cpp
examples/ex-python/: CMakeLists.txt  README.md  ex_bindings.py  ex_builtin.py  ex_external.py  ex_general.py  ex_profiler.py  ex_sample.py  ex_tracer.py  libex_bindings.cpp  sample.py
examples/ex-roofline/: CMakeLists.txt  kernel.cpp  kernel.hpp  test_cxx_roofline.cpp  test_cxx_roofline_fib.cpp
examples/ex-scorep/: CMakeLists.txt  README.md  ex_scorep.cpp
examples/ex-statistics/: CMakeLists.txt  README.md  ex_statistics.cpp
examples/ex-tuple/: CMakeLists.txt  test_cxx_tuple.cpp
examples/ex1/: CMakeLists.txt  test_timing.cpp
examples/ex2/: CMakeLists.txt  mpi_test_timing.cpp
source/: CMakeLists.txt  auto_timer.cpp  auto_timer_extern.cpp  base_clock.cpp  base_timer.cpp  clocks.cpp  ctimemory.c  ctimemory.cpp  ctimemory.cu  cuda.cpp  cuda_extern.cpp  cxx.cpp  cxxtimemory.cpp  data_types.cpp  environment.cpp  formatters.cpp  init.cpp  kokkosp.cpp  library.cpp  macros.cpp  manager.cpp  native_extern.cpp  pthread.cpp  rss.cpp  serializer.cpp  settings.cpp  signal_detection.cpp  timemory.cc  timemory.cpp  timemory_c.c  timemory_c.cpp  timemory_f.f90  timer.cpp  timing_manager.cpp  trace.cpp  weak.cpp
source/julia/: CMakeLists.txt  timemory-jl.cpp  timemory.jl.in
source/jump/: CMakeLists.txt  README.md  library.cpp
source/preload/: CMakeLists.txt  preload_api.cpp  preload_api.hpp
source/python/: CMakeLists.txt  README.md  libpytimemory-api.cpp  libpytimemory-auto-timer.cpp  libpytimemory-component-bundle.cpp  libpytimemory-component-bundle.hpp  libpytimemory-component-list.cpp  libpytimemory-components.cpp  libpytimemory-components.hpp  libpytimemory-enumeration.cpp  libpytimemory-hardware-counters.cpp  libpytimemory-profile.cpp  libpytimemory-profiler.cpp  libpytimemory-rss-usage.cpp  libpytimemory-settings.cpp  libpytimemory-signals.cpp  libpytimemory-statistics.cpp  libpytimemory-storage.cpp  libpytimemory-trace.cpp  libpytimemory-units.cpp  libpytimemory.cpp  libpytimemory.hpp  libtimemory.cpp  libtimemory.hpp  pytimemory.hpp  timemory.cpp
source/stubs/: CMakeLists.txt  README.md  library.cpp
source/tests/: .tests_template.cpp  CMakeLists.txt  aligned_allocator_tests.cpp  api_tests.cpp  apply_tests.cpp  archive_storage_tests.cpp  argparse_tests.cpp  (+50 more)
timemory/: CMakeLists.txt  README.md  __init__.py.in  common.py  options.py  signals.py  timemory.py  units.py
(+2702 files in other folders)
