[metadata]
name = timemory
url = http://timemory.readthedocs.io
download_url = http://github.com/NERSC/timemory.git
author = Jonathan R. Madsen
author_email = jrmadsen@lbl.gov
maintainer = Jonathan R. Madsen
maintainer_email = jrmadsen@lbl.gov
license = MIT
description = Suite of performance analysis tools and toolkit for building performance analysis tools
keywords =
    performance
    profiling
    sampling
    hardware counters
    pybind11
    timing
    memory
    gpu
    cupti
    cuda
    papi
    gperftools
    craypat
    ompt
    likwid
    roofline
    TAU
    vtune
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: GPU
    Environment :: GPU :: NVIDIA CUDA
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows :: Windows 10
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Operating System :: Unix
    Programming Language :: C++
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Bug Tracking
    Topic :: Software Development :: Testing
    Topic :: Software Development :: Quality Assurance
    Topic :: Software Development :: Libraries :: Python Modules
    Topic :: System :: Logging
    Topic :: System :: Monitoring
    Topic :: Utilities

[options]
packages = timemory
zip_safe = false
include_package_data = false

[flake8]
ignore =
    F403,
    F405,
    W503,
    E203,
    N801,
    N802,
    N804,
    N806,
    N812,
exclude =
    .git,
    __pycache__,
    docs,
    old,
    build,
    dist,
    pybind11,
    _skbuild,
    external,
    build-*,
    scripts,
    .misc,
    pyctest-runner.py,
    spack,
max-complexity = 40
max-line-length = 90
